
classDiagram
    %% ARCS Clustering System - Models & Services
    
    class CustomUser {
        +int id
        +string username
        +Role role
        +boolean is_active
        +boolean is_online
        +datetime last_activity
        +__str__() string
    }
    
    class StudentMotivationProfile {
        +int id
        +CustomUser student
        +float attention
        +float relevance
        +float confidence
        +float satisfaction
        +string motivation_level
        +__str__() string
    }
    
    class ARCSQuestionnaire {
        +int id
        +Material material
        +string title
        +string description
        +string questionnaire_type
        +boolean is_active
        +datetime start_date
        +datetime end_date
        +int duration_minutes
        +CustomUser created_by
        +string slug
        +is_available_for_submission() tuple
        +time_remaining() int
        +save() void
        +__str__() string
    }
    
    class ARCSQuestion {
        +int id
        +ARCSQuestionnaire questionnaire
        +string text
        +string dimension
        +string question_type
        +int order
        +boolean is_required
        +string choice_a
        +string choice_b
        +string choice_c
        +string choice_d
        +string choice_e
        +int scale_min
        +int scale_max
        +string scale_label_min
        +string scale_label_max
        +choices() list
        +scale_labels() dict
        +__str__() string
    }
    
    class ARCSResponse {
        +int id
        +ARCSQuestionnaire questionnaire
        +CustomUser student
        +datetime submitted_at
        +datetime completed_at
        +boolean is_completed
        +__str__() string
    }
    
    class ARCSAnswer {
        +int id
        +ARCSResponse response
        +ARCSQuestion question
        +int likert_value
        +string choice_value
        +string text_value
        +datetime answered_at
        +__str__() string
    }
    
    class ARCSProcessor {
        +int n_clusters
        +StandardScaler scaler
        +__init__(n_clusters) void
        +update_all_motivation_levels() dict
        +get_cluster_statistics() dict
    }
    
    class Material {
        +int id
        +string title
        +Subject subject
        +string slug
        +datetime created_at
        +datetime updated_at
        +save() void
        +__str__() string
    }
    
    %% Relationships
    CustomUser -- StudentMotivationProfile : "has a"
    CustomUser "1" -- "many" ARCSQuestionnaire : "creates"
    CustomUser "1" -- "many" ARCSResponse : "submits"
    
    Material "1" -- "many" ARCSQuestionnaire : "is used in"
    ARCSQuestionnaire "1" -- "many" ARCSQuestion : "contains"
    ARCSQuestionnaire "1" -- "many" ARCSResponse : "receives"
    
    ARCSResponse "1" -- "many" ARCSAnswer : "contains"
    ARCSQuestion "1" -- "many" ARCSAnswer : "is answered in"
    
    ARCSProcessor ..> StudentMotivationProfile : "processes & updates"
    ARCSProcessor ..> CustomUser : "analyzes"
    
    %% Notes
    note for StudentMotivationProfile "Menyimpan hasil analisis ARCS\ndan level motivasi (Tinggi/Sedang/Rendah)"
    note for ARCSProcessor "Menggunakan K-Means clustering untuk menganalisis\nmotivasi siswa berdasarkan dimensi ARCS"
    note for ARCSQuestionnaire "Asesmen Pre/Post dengan batasan waktu\ndan kontrol ketersediaan"
